<resources>
    <string name="app_name">J Pharma</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="facebook_app_id">735601424432499</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">891acf797f628eda3ac44c801d7cb1bd</string>
    <string name="navigation_drawer_open">Open Menu</string>
    <string name="navigation_drawer_close">Close Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_image_path">Enter the Image URL</string>
    <string name="enter_the_medicine_detail">Enter the Medicine Detail</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="enter_the_medicine_name">Enter the Medicine Name</string>
    <string name="enter_the_mg">Enter the mg</string>
    <string name="enter_the_price">Enter the Price</string>
    <string name="manage_medicine">Manage Medicine</string>
    <string name="medicine_name">Medicine Name:</string>
    <string name="medicine_mg">Medicine Mg:</string>
    <string name="medicine_price">Medicine Price:</string>
    <string name="medicine_details">Medicine Details:</string>
    <string name="medicine_details_title">Medicine Details</string>
    <string name="image_url">Image URL :</string>
    <string name="edit_medicine_title">Edit Medicine</string>
    <string name="view_wholesalers">View Wholesalers</string>
    <string name="shop_name">Shop Name:</string>
    <string name="city_name">City Name:</string>
    <string name="shop_address">Address:</string>
    <string name="wholesaler_detail">Wholesaler Detail</string>
    <string name="user_name">User Name:</string>
    <string name="contact_no">Contact No.:</string>
    <string name="enter_shop_name">Enter Shop Name</string>
    <string name="enter_shop_address">Enter Shop Address</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="place_order_title">Place Order</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="view_cart">View Cart</string>
    <string name="cart">Cart</string>
    <string name="place_order">Place Order</string>
    <string name="date_time_format">ddMMyyHHmmss</string>
    <string name="date_time_format_for_model">dd-MM-yyyy HH:mm:ss</string>
    <string name="year_format_for_model">yyyy</string>
    <string name="manage_orders">Manage Orders</string>
    <string name="pending">Pending</string>
    <string name="dispatched">Dispatched</string>
    <string name="cancelled">Cancelled</string>
    <string name="dispatch">Dispatch</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="completed">Completed</string>
    <string name="order_details">Order Details</string>
    <string name="total_price">Total Price in RS</string>
    <string name="medicine_name_title">Medicine Name</string>
    <string name="quantity">Quantity</string>
    <string name="proceeding">Proceeding</string>
    <string name="orders_detail">Orders Detail</string>
    <string name="orders_history">Orders History</string>
    <string name="total_price_in_rs">Total Price (Rs) :</string>
    <string name="edit_order">Edit Order</string>
    <string name="sales_report">Sales Report</string>
    <string name="select_the_month">Select the Month :</string>
    <string name="enter_year">Enter Year</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="cancelled_orders">Cancelled Orders</string>
    <string name="cancelled_orders_amount_in_rs">Cancelled Orders Amount in RS :</string>
    <string name="order_status">Orders Status</string>
    <string name="order_id">Order Id:</string>
    <string name="date_and_time">Date and Time :</string>
    <string name="reason">Reason :</string>
    <string name="edit">Edit</string>
    <string name="apply">Apply</string>
    <string name="stock">Stock</string>
    <string name="enter_the_stock">Enter the Stock</string>
    <string name="forget_password">Forget Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="stock_available">Stock Available:</string>
</resources>