<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".admin.fragments.AddMedicineFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorSecondary"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back_arrow" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_medicine"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/done_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:src="@drawable/tick_icon" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/medicine_image_view"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/sample_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/medicine_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/medicine_image_view" />

            <EditText
                android:id="@+id/name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edittext_style"
                android:gravity="start"
                android:hint="@string/enter_the_medicine_name"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@+id/name_tag"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/name_tag"
                app:layout_constraintTop_toTopOf="@+id/name_tag" />

            <TextView
                android:id="@+id/image_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/image_url"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/image_tv" />


            <EditText
                android:id="@+id/image_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style"
                android:gravity="start"
                android:layout_marginTop="15dp"
                android:hint="@string/enter_the_image_path"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="@+id/name_tv"
                app:layout_constraintStart_toStartOf="@+id/name_tv"
                app:layout_constraintTop_toBottomOf="@+id/name_tv" />

            <TextView
                android:id="@+id/detail_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/medicine_details"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/detail_tv" />


            <EditText
                android:id="@+id/detail_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_style"
                android:gravity="start"
                android:hint="@string/enter_the_medicine_detail"
                android:minLines="5"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="@+id/image_tv"
                app:layout_constraintStart_toStartOf="@+id/image_tv"
                app:layout_constraintTop_toBottomOf="@+id/image_tv" />

            <TextView
                android:id="@+id/mg_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/medicine_mg"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_tv" />


            <EditText
                android:id="@+id/mg_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style"
                android:gravity="start"
                android:hint="@string/enter_the_mg"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@+id/mg_tag"
                app:layout_constraintEnd_toEndOf="@+id/detail_tv"
                app:layout_constraintStart_toStartOf="@+id/detail_tv"
                app:layout_constraintTop_toTopOf="@+id/mg_tag" />

            <TextView
                android:id="@+id/price_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:text="@string/medicine_price"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mg_tag" />

            <EditText
                android:id="@+id/price_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style"
                android:gravity="start"
                android:hint="@string/enter_the_price"
                android:inputType="numberSigned"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@+id/price_tag"
                app:layout_constraintEnd_toEndOf="@+id/mg_tv"
                app:layout_constraintStart_toStartOf="@+id/mg_tv"
                app:layout_constraintTop_toTopOf="@+id/price_tag" />

            <TextView
                android:id="@+id/stock_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:text="@string/stock"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price_tag" />

            <EditText
                android:id="@+id/stock_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style"
                android:gravity="start"
                android:hint="@string/enter_the_stock"
                android:inputType="numberSigned"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@+id/stock_tag"
                app:layout_constraintEnd_toEndOf="@+id/price_tv"
                app:layout_constraintStart_toStartOf="@+id/price_tv"
                app:layout_constraintTop_toTopOf="@+id/stock_tag" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>