<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".admin.bottom_sheet.ViewWholesalersBottomFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/wholesaler_detail"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/avatar"
            app:civ_border_width="2dp"
            android:layout_marginLeft="5dp"
            android:padding="1dp"
            app:civ_border_color="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/user_name"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_image" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/medicine_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/info_name"
            app:layout_constraintTop_toTopOf="@+id/info_name" />

        <TextView
            android:id="@+id/info_mg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:text="@string/shop_name"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_tv" />

        <TextView
            android:id="@+id/shop_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/medicine_name"
            app:layout_constraintEnd_toEndOf="@+id/name_tv"
            app:layout_constraintStart_toStartOf="@+id/name_tv"
            app:layout_constraintTop_toBottomOf="@+id/name_tv" />

        <TextView
            android:id="@+id/info_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:text="@string/city_name"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_mg" />

        <TextView
            android:id="@+id/city_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:gravity="center"
            android:text="@string/medicine_name"
            app:layout_constraintEnd_toEndOf="@+id/shop_name_tv"
            app:layout_constraintStart_toStartOf="@+id/shop_name_tv"
            app:layout_constraintTop_toBottomOf="@+id/shop_name_tv" />

        <TextView
            android:id="@+id/info_detail"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/shop_address"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/address_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_price" />

        <TextView
            android:id="@+id/address_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLines="50"
            android:gravity="center"
            android:text="@string/medicine_name"
            app:layout_constraintEnd_toEndOf="@+id/city_tv"
            app:layout_constraintStart_toStartOf="@+id/city_tv"
            app:layout_constraintTop_toBottomOf="@+id/city_tv" />

        <TextView
            android:id="@+id/info_contact"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/contact_no"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/contact_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_detail" />

        <TextView
            android:id="@+id/contact_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLines="50"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/medicine_name"
            app:layout_constraintEnd_toEndOf="@+id/address_tv"
            app:layout_constraintStart_toStartOf="@+id/address_tv"
            app:layout_constraintTop_toBottomOf="@+id/address_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>